<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="313dp"
        android:background="@color/colorPrimary"
        android:elevation="8dp">


        <!--EditTexts will go for the userinput-->
        <EditText
            android:id="@+id/totalEditText"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="31dp"
            android:background="@drawable/roundcorners_edittext"
            android:elevation="8dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/totalAmount"
            android:inputType="number|numberDecimal" />



        <EditText
            android:id="@+id/tipamountEditText"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="83dp"
            android:background="@drawable/roundcorners_edittext"
            android:elevation="8dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/tipAmount"
            android:inputType="number" />


        <EditText
            android:id="@+id/numOfPeopleEditText"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_alignEnd="@+id/tipamountEditText"
            android:layout_centerVertical="true"
            android:layout_marginEnd="0dp"
            android:background="@drawable/roundcorners_edittext"
            android:elevation="8dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/numOfPeople"
            android:inputType="number" />


        <!--</android.support.design.widget.TextInputLayout>-->

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="59dp"
            android:layout_marginEnd="47dp"
            android:clickable="true"
            android:src="@drawable/baseline_view_agenda_24"
            app:backgroundTint="@color/colorAccent"
            app:elevation="8dp"
            app:fabSize="normal"
            app:pressedTranslationZ="12dp" />

    </RelativeLayout>



    <!--GridLayout for the card views and TextView-->
    <android.support.v7.widget.GridLayout
        android:layout_width="wrap_content"
        android:layout_height="320dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:elevation="10dp"
        android:padding="14dp"
        app:columnCount="2"
        app:rowCount="2">


        <android.support.v7.widget.CardView
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_column="1"
            app:layout_row="0">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tipPerPersonTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="28dp"
                    android:text="@string/tipPerPerson"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tipPerPersonResults"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="39dp"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_column="0"
            app:layout_row="0">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/totalBillTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="28dp"
                    android:text="@string/totalBill"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/totalBillResults"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="39dp"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_column="0"
            app:layout_row="1">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/tipTotalTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="28dp"
                    android:text="@string/tipTotal"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tipTotalResults"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="39dp"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_column="1"
            app:layout_row="1">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/billPerPersonTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="28dp"
                    android:text="@string/billPerPerson"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/billPerPersonResults"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="39dp"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>


    </android.support.v7.widget.GridLayout>





</RelativeLayout>